--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Visit Comber</title>
+  <title>A Chronicle of Comber</title>
 </head>
 
 <body>
   <main>
-    <h1>Visit Comber</h1>
+    <h1>The Town of Thomas Andrews</h1>
   </main>
 </body>
 
