Update title in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <main>
-    <h1>The Town of Thomas Andrews</h1>
+    <h1>aA Chronical of Comber, Northern Ireland</h1>
   </main>
 </body>
 
