Fix capitalization in heading

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <main>
-    <h1>aA Chronical of Comber, Northern Ireland</h1>
+    <h1>A Chronical of Comber, Northern Ireland</h1>
   </main>
 </body>
 
