Update heading for Comber location

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <main>
-    <h1>Comber Northern Ireland County Down</h1>
+    <h1>Comber County Down Northern Ireland</h1>
   </main>
 </body>
 
