Change page title from 'Comber County Down' to 'Buzzin Hornets'

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Comber County Down Northern Ireland</title>
+  <title>Buzzin Hornets</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="We help companies deliver reliable products and services across engineering and cloud.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
