Update logo and hero section heading in HTML

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">Buzzin Hornets Motorsport</div>
+    <div class="logo">Jordy Buzzin Hornets Motorsport</div>
     <nav>
       <ul>
         <li><a href="#services">Services</a></li>
@@ -37,7 +37,7 @@
 
   <section class="hero">
     <div>
-      <h1>Motorsport Engineering Teaching .</h1>
+      <h1>Motorsport Engineering</h1>
       <p>We partner with teams to design, build, and operate reliable systems — from mechanical design to Azure cloud.</p>
       <a class="btn" href="#contact">Start a project</a>
     </div>
