--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">Jordy Buzzin Hornets Motorsport</div>
+    <div class="buzzin.jpg">Jordy Buzzin Hornets Motorsport</div>
     <nav>
       <ul>
         <li><a href="#services">Services</a></li>
