--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
   <section class="hero">
     <div>
       <h1>Motorsport Engineering</h1>
-      <p>We partner with teams to design, build, and operate reliable systems — from mechanical design to Azure cloud.</p>
+      <p>We partner with teams to design, build, and operate reliable systems </p>
       <a class="btn" href="#contact">Start a project</a>
     </div>
     <div class="card">
