Add company logo to index.html header

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,9 @@
   </style>
 </head>
 <body>
+    <header>
+    <img src="buzzin.jpg" alt="Company Logo" width="200" height="auto">
+  </header>
   <header>
     <div class="buzzin.jpg">Jordy Buzzin Hornets Motorsport</div>
     <nav>
