Refactor header section and update logo display

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,7 @@
   </style>
 </head>
 <body>
-    <header>
-    <img src="buzzin.jpg" alt="Company Logo" width="200" height="auto">
-  </header>
+   
   <header>
     <div class="buzzin.jpg">Jordy Buzzin Hornets Motorsport</div>
     <nav>
@@ -36,6 +34,9 @@
         <li><a class="btn" href="#contact">Contact</a></li>
       </ul>
     </nav>
+  </header>
+   <header>
+    <img src="buzzin.jpg" alt="Company Logo" width="200" height="100">
   </header>
 
   <section class="hero">
