Refactor header section and add profile photo
Removed the old header section and added a new cv-header div for profile photo and name.

--- a/src/index.html
+++ b/src/index.html
@@ -34,10 +34,14 @@
         <li><a class="btn" href="#contact">Contact</a></li>
       </ul>
     </nav>
-  </header>
-   <header>
-    <img src="buzzin.jpg" alt="Company Logo" width="200" height="100">
-  </header>
+   </style>
+</head>
+<body>
+  <div class="cv-header">
+    <!-- Profile photo -->
+    <img src="buzzin.jpg" alt="Profile Photo">
+    
+    <!-- Name and title -->
 
   <section class="hero">
     <div>
