--- a/src/index.html
+++ b/src/index.html
@@ -2,45 +2,144 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Acme Corp — Innovative Solutions</title>
+  <title>Company Name</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Acme Corp provides innovative solutions for modern businesses.">
   <style>
-    :root {
-      --bg: #0f172a;       /* slate-900 */
-      --panel: #111827;    /* gray-900 */
-      --text: #e5e7eb;     /* gray-200 */
-      --muted: #9ca3af;    /* gray-400 */
-      --brand: #3b82f6;    /* blue-500 */
-      --brand-dark: #1d4ed8; /* blue-700 */
-      --accent: #22d3ee;   /* cyan-400 */
-    }
-    * { box-sizing: border-box; }
     body {
       margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, "Helvetica Neue", Arial, sans-serif;
-      color: var(--text);
-      background: linear-gradient(180deg, var(--bg), #0b1227 60%, #071021);
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      background: #f9f9f9;
+      color: #333;
     }
-    a { color: inherit; text-decoration: none; }
-    img { max-width: 100%; height: auto; display: block; }
-
-    /* Layout */
-    .container { width: 100%; max-width: 1100px; margin: 0 auto; padding: 0 20px; }
-
-    /* Header */
     header {
-      position: sticky; top: 0; z-index: 20;
-      background: rgba(17, 24, 39, 0.8);
-      backdrop-filter: blur(8px);
-      border-bottom: 1px solid rgba(148,163,184,0.15);
+      background: #004080;
+      color: #fff;
+      padding: 20px;
     }
-    .nav {
-      display: flex; align-items: center; justify-content: space-between;
-      padding: 16px 0;
+    header .container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
-    .brand {
-      display: flex; align-items: center; gap: 12px;
+    header nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      margin: 0;
+      padding: 0;
     }
-    .brand img {
-      width: 40px; height: 
+    header nav a {
+      color: #fff;
+      text-decoration: none;
+    }
+    .hero {
+      background: url('images/hero.jpg') no-repeat center center/cover;
+      color: #fff;
+      text-align: center;
+      padding: 100px 20px;
+    }
+    .hero h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+    }
+    .hero p {
+      font-size: 20px;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+    section {
+      padding: 60px 20px;
+    }
+    .container {
+      max-width: 1100px;
+      margin: 0 auto;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+    .card {
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    footer {
+      background: #004080;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+    }
+  </style>
+</head>
+<body>
+  <!-- Header -->
+  <header>
+    <div class="container">
+      <h2>Company Name</h2>
+      <nav>
+        <ul>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <section class="hero">
+    <h1>Welcome to Company Name</h1>
+    <p>We provide innovative solutions to help your business grow.</p>
+  </section>
+
+  <!-- Services -->
+  <section id="services">
+    <div class="container">
+      <h2>Our Services</h2>
+      <div class="grid">
+        <div class="card">
+          <h3>Consulting</h3>
+          <p>Expert advice to streamline your operations.</p>
+        </div>
+        <div class="card">
+          <h3>Development</h3>
+          <p>Custom software solutions tailored to your needs.</p>
+        </div>
+        <div class="card">
+          <h3>Support</h3>
+          <p>Reliable ongoing support for your systems.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section id="about">
+    <div class="container">
+      <h2>About Us</h2>
+      <p>We are a team of professionals with years of experience in technology and business solutions. Our mission is to deliver high-quality services that empower companies worldwide.</p>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <form>
+        <input type="text" placeholder="Your Name" required><br><br>
+        <input type="email" placeholder="Your Email" required><br><br>
+        <textarea placeholder="Your Message" required></textarea><br><br>
+        <button type="submit">Send</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Company Name. All rights reserved.</p>
+  </footer>
+</body>
+</html>
