--- a/src/index.html
+++ b/src/index.html
@@ -34,4 +34,118 @@
       padding: 120px 20px;
     }
     .hero h2 { font-size: 48px; margin-bottom: 20px; }
-    .hero p { font-size: 20px; max-width: 700px; margin: 
+    .hero p { font-size: 20px; max-width: 700px; margin: 0 auto 30px; }
+    .hero .btn {
+      background: #ff6600; color: #fff; padding: 12px 24px;
+      border-radius: 6px; text-decoration: none; font-weight: bold;
+    }
+    .hero .btn:hover { background: #e65c00; }
+
+    /* Sections */
+    section { padding: 60px 20px; }
+    section h2 { text-align: center; margin-bottom: 40px; font-size: 32px; color: #002b5c; }
+
+    /* Services */
+    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
+    .card {
+      background: #fff; padding: 20px; border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    .card h3 { margin-bottom: 10px; color: #ff6600; }
+
+    /* About */
+    .about { display: flex; flex-wrap: wrap; gap: 40px; align-items: center; }
+    .about img { max-width: 400px; border-radius: 8px; }
+    .about p { flex: 1; }
+
+    /* Contact */
+    form { max-width: 600px; margin: 0 auto; display: grid; gap: 15px; }
+    input, textarea {
+      padding: 12px; border: 1px solid #ccc; border-radius: 6px; font-size: 16px;
+    }
+    button {
+      background: #002b5c; color: #fff; padding: 12px; border: none;
+      border-radius: 6px; font-size: 16px; cursor: pointer;
+    }
+    button:hover { background: #004080; }
+
+    /* Footer */
+    footer {
+      background: #002b5c; color: #fff; text-align: center;
+      padding: 20px; margin-top: 40px;
+    }
+  </style>
+</head>
+<body>
+  <!-- Header -->
+  <header>
+    <div class="container">
+      <h1>Company Name</h1>
+      <nav>
+        <ul>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <section class="hero">
+    <h2>Professional Solutions for Modern Business</h2>
+    <p>We help companies innovate, streamline, and grow with tailored strategies and technology.</p>
+    <a href="#contact" class="btn">Get in Touch</a>
+  </section>
+
+  <!-- Services -->
+  <section id="services">
+    <div class="container">
+      <h2>Our Services</h2>
+      <div class="grid">
+        <div class="card">
+          <h3>Consulting</h3>
+          <p>Expert advice to optimize operations and strategy.</p>
+        </div>
+        <div class="card">
+          <h3>Development</h3>
+          <p>Custom software and cloud solutions built for your needs.</p>
+        </div>
+        <div class="card">
+          <h3>Support</h3>
+          <p>Reliable ongoing support to keep your systems running smoothly.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section id="about">
+    <div class="container about">
+      <img src="images/team.jpg" alt="Our Team">
+      <div>
+        <h2>About Us</h2>
+        <p>We are a team of professionals with years of experience in engineering, cloud computing, and business solutions. Our mission is to deliver high-quality services that empower companies worldwide.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <form>
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+        <textarea placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Company Name. All rights reserved.</p>
+  </footer>
+</body>
+</html>
