--- a/src/index.html
+++ b/src/index.html
@@ -2,142 +2,57 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Company Name</title>
+  <title>Motorsport Company</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { font-family: "Segoe UI", Arial, sans-serif; display: flex; min-height: 100vh; }
+    body { font-family: "Segoe UI", Arial, sans-serif; background: #111; color: #eee; }
 
-    /* Sidebar */
-    .sidebar {
-      width: 250px;
-      background: #002b5c;
+    .container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
+
+    /* Header */
+    header {
+      background: #d00000;
       color: #fff;
-      display: flex;
-      flex-direction: column;
-      padding: 20px;
+      padding: 20px 0;
+      position: sticky; top: 0; z-index: 1000;
     }
-    .sidebar img {
-      width: 80px; height: auto; border-radius: 8px; margin-bottom: 20px;
-    }
-    .sidebar h1 {
-      font-size: 20px; margin-bottom: 30px;
-    }
-    .sidebar nav ul {
-      list-style: none; display: flex; flex-direction: column; gap: 15px;
-    }
-    .sidebar nav a {
-      color: #fff; text-decoration: none; font-weight: 500;
-    }
-    .sidebar nav a:hover { text-decoration: underline; }
-
-    /* Main content */
-    .main {
-      flex: 1;
-      background: #f5f7fa;
-      padding: 40px;
-    }
-    section { margin-bottom: 60px; }
-    section h2 { color: #002b5c; margin-bottom: 20px; }
+    header .container { display: flex; justify-content: space-between; align-items: center; }
+    header h1 { font-size: 24px; text-transform: uppercase; letter-spacing: 2px; }
+    nav ul { list-style: none; display: flex; gap: 20px; }
+    nav a { color: #fff; text-decoration: none; font-weight: bold; }
+    nav a:hover { text-decoration: underline; }
 
     /* Hero */
     .hero {
-      background: url('images/hero.jpg') no-repeat center center/cover;
-      color: #fff; padding: 80px 20px; border-radius: 8px;
-      text-align: center; margin-bottom: 40px;
+      background: url('images/motorsport-hero.jpg') no-repeat center center/cover;
+      text-align: center; color: #fff;
+      padding: 120px 20px;
     }
-    .hero h2 { font-size: 36px; margin-bottom: 20px; }
-    .hero p { font-size: 18px; max-width: 600px; margin: 0 auto; }
+    .hero h2 { font-size: 48px; margin-bottom: 20px; text-transform: uppercase; }
+    .hero p { font-size: 20px; max-width: 700px; margin: 0 auto 30px; }
+    .hero .btn {
+      background: #ffcc00; color: #111; padding: 12px 24px;
+      border-radius: 6px; text-decoration: none; font-weight: bold;
+    }
+    .hero .btn:hover { background: #e6b800; }
 
-    /* Services grid */
-    .grid {
-      display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
+    /* Sections */
+    section { padding: 60px 20px; }
+    section h2 { text-align: center; margin-bottom: 40px; font-size: 32px; color: #ffcc00; }
+
+    /* Services */
+    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
     .card {
-      background: #fff; padding: 20px; border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      background: #222; padding: 20px; border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.5);
     }
-    .card h3 { color: #ff6600; margin-bottom: 10px; }
+    .card h3 { margin-bottom: 10px; color: #d00000; }
 
-    /* Contact form */
-    form { display: grid; gap: 15px; max-width: 500px; }
-    input, textarea {
-      padding: 12px; border: 1px solid #ccc; border-radius: 6px;
+    /* Team */
+    .team { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; }
+    .member {
+      background: #222; padding: 20px; border-radius: 8px; width: 250px; text-align: center;
     }
-    button {
-      background: #002b5c; color: #fff; padding: 12px;
-      border: none; border-radius: 6px; cursor: pointer;
-    }
-    button:hover { background: #004080; }
-
-    /* Footer */
-    footer { text-align: center; color: #777; margin-top: 40px; }
-  </style>
-</head>
-<body>
-  <!-- Sidebar -->
-  <aside class="sidebar">
-    <img src="buzzin.jpg" alt="Company Logo">
-    <h1>Company Name</h1>
-    <nav>
-      <ul>
-        <li><a href="#hero">Home</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </aside>
-
-  <!-- Main content -->
-  <div class="main">
-    <!-- Hero -->
-    <section id="hero" class="hero">
-      <h2>Professional Solutions for Modern Business</h2>
-      <p>We help companies innovate, streamline, and grow with tailored strategies and technology.</p>
-    </section>
-
-    <!-- Services -->
-    <section id="services">
-      <h2>Our Services</h2>
-      <div class="grid">
-        <div class="card">
-          <h3>Consulting</h3>
-          <p>Expert advice to optimize operations and strategy.</p>
-        </div>
-        <div class="card">
-          <h3>Development</h3>
-          <p>Custom software and cloud solutions built for your needs.</p>
-        </div>
-        <div class="card">
-          <h3>Support</h3>
-          <p>Reliable ongoing support to keep your systems running smoothly.</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- About -->
-    <section id="about">
-      <h2>About Us</h2>
-      <p>We are a team of professionals with years of experience in engineering, cloud computing, and business solutions. Our mission is to deliver high-quality services that empower companies worldwide.</p>
-    </section>
-
-    <!-- Contact -->
-    <section id="contact">
-      <h2>Contact Us</h2>
-      <form>
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea placeholder="Your Message" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-      <p>© 2025 Company Name. All rights reserved.</p>
-    </footer>
-  </div>
-</body>
-</html>
+    .member img { width: 100%; border-radius: 8px; margin-bottom: 10px; }
+    .member h4 { margin-bottom: 5px; color: #ff
