--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>BUZZIN HORNETS</title>
+  <title>Motorsport Co.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -55,4 +55,58 @@
       background: #222; padding: 20px; border-radius: 8px; width: 250px; text-align: center;
     }
     .member img { width: 100%; border-radius: 8px; margin-bottom: 10px; }
-    .member h4 { margin-bottom: 5px; color: #ff
+    .member h4 { margin-bottom: 5px; color: #ffcc00; }
+
+    /* Contact */
+    form { max-width: 600px; margin: 0 auto; display: grid; gap: 15px; }
+    input, textarea {
+      padding: 12px; border: 1px solid #555; border-radius: 6px; background: #111; color: #eee;
+    }
+    button {
+      background: #d00000; color: #fff; padding: 12px;
+      border: none; border-radius: 6px; cursor: pointer;
+    }
+    button:hover { background: #a00000; }
+
+    /* Footer */
+    footer { background: #000; color: #777; text-align: center; padding: 20px; margin-top: 40px; }
+  </style>
+</head>
+<body>
+  <!-- Header -->
+  <header>
+    <div class="container">
+      <h1>Motorsport Co.</h1>
+      <nav>
+        <ul>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#team">Team</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <section class="hero">
+    <h2>Driven by Performance</h2>
+    <p>Engineering excellence and racing innovation for the motorsport world.</p>
+    <a href="#contact" class="btn">Work With Us</a>
+  </section>
+
+  <!-- Services -->
+  <section id="services">
+    <div class="container">
+      <h2>Our Services</h2>
+      <div class="grid">
+        <div class="card">
+          <h3>Race Engineering</h3>
+          <p>Trackside support, data analysis, and performance optimization.</p>
+        </div>
+        <div class="card">
+          <h3>Vehicle Development</h3>
+          <p>Design, simulation, and prototyping for competitive edge.</p>
+        </div>
+        <div class="card">
+          <h3>Consulting</h3>
+          <p>Strategic advice for teams, sponsors, and motorsport
