Add team members and contact section to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -109,4 +109,52 @@
         </div>
         <div class="card">
           <h3>Consulting</h3>
-          <p>Strategic advice for teams, sponsors, and motorsport
+          <p>Strategic advice for teams, sponsors, and motorsport organizations.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Team -->
+  <section id="team">
+    <div class="container">
+      <h2>Meet the Team</h2>
+      <div class="team">
+        <div class="member">
+          <img src="images/driver.jpg" alt="Lead Driver">
+          <h4>Alex Speed</h4>
+          <p>Lead Driver</p>
+        </div>
+        <div class="member">
+          <img src="images/engineer.jpg" alt="Chief Engineer">
+          <h4>Jordan Wright</h4>
+          <p>Chief Engineer</p>
+        </div>
+        <div class="member">
+          <img src="images/manager.jpg" alt="Team Manager">
+          <h4>Sam Taylor</h4>
+          <p>Team Manager</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <form>
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+        <textarea placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Motorsport Co. All rights reserved.</p>
+  </footer>
+</body>
+</html>
