Update header and hero section text

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
   <!-- Header -->
   <header>
     <div class="container">
-      <h1>Motorsport Co.</h1>
+      <h1>BUZZIN HORNETS</h1>
       <nav>
         <ul>
           <li><a href="#services">Services</a></li>
@@ -89,7 +89,7 @@
 
   <!-- Hero -->
   <section class="hero">
-    <h2>Driven by Performance</h2>
+    <h2>Driven by Performance and Keep'er Lit</h2>
     <p>Engineering excellence and racing innovation for the motorsport world.</p>
     <a href="#contact" class="btn">Work With Us</a>
   </section>
