--- a/src/index.html
+++ b/src/index.html
@@ -127,12 +127,12 @@
         </div>
         <div class="member">
           <img src="images/engineer.jpg" alt="Chief Engineer">
-          <h4>Jordan Wright</h4>
+          <h4>Josh Chang</h4>
           <p>Chief Engineer</p>
         </div>
         <div class="member">
           <img src="images/manager.jpg" alt="Team Manager">
-          <h4>Sam Taylor</h4>
+          <h4>Jordan Wright</h4>
           <p>Team Manager</p>
         </div>
       </div>
@@ -154,7 +154,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Motorsport Co. All rights reserved.</p>
+    <p>© 2025 BUZZIN HORNETS SPORT All rights reserved.</p>
   </footer>
 </body>
 </html>
