--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>BUZZIN HORNETS SPORT</title>
+  <title>Motorsport Co.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -25,7 +25,7 @@
 
     /* Hero */
     .hero {
-      background: url('buzzin.jpg') no-repeat center center/cover;
+      background: url('images/motorsport-hero.jpg') no-repeat center center/cover;
       text-align: center; color: #fff;
       padding: 120px 20px;
     }
@@ -76,7 +76,7 @@
   <!-- Header -->
   <header>
     <div class="container">
-      <h1>BUZZIN HORNETS</h1>
+      <h1>Motorsport Co.</h1>
       <nav>
         <ul>
           <li><a href="#services">Services</a></li>
@@ -89,7 +89,7 @@
 
   <!-- Hero -->
   <section class="hero">
-    <h2>Driven by Performance and Keep'er Lit</h2>
+    <h2>Driven by Performance</h2>
     <p>Engineering excellence and racing innovation for the motorsport world.</p>
     <a href="#contact" class="btn">Work With Us</a>
   </section>
@@ -127,12 +127,12 @@
         </div>
         <div class="member">
           <img src="images/engineer.jpg" alt="Chief Engineer">
-          <h4>Josh Chang</h4>
+          <h4>Jordan Wright</h4>
           <p>Chief Engineer</p>
         </div>
         <div class="member">
           <img src="images/manager.jpg" alt="Team Manager">
-          <h4>Jordan Wright</h4>
+          <h4>Sam Taylor</h4>
           <p>Team Manager</p>
         </div>
       </div>
@@ -154,7 +154,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 BUZZIN HORNETS SPORT All rights reserved.</p>
+    <p>© 2025 Motorsport Co. All rights reserved.</p>
   </footer>
 </body>
 </html>
