--- a/src/index.html
+++ b/src/index.html
@@ -87,6 +87,13 @@
     </div>
   </header>
 
+  <header>
+  <div class="container">
+    <img src="buzzin.jpg" alt="Company Logo" width="120" height="auto">
+    <h1>Motorsport Co.</h1>
+  </div>
+</header>
+
   <!-- Hero -->
   <section class="hero">
     <h2>Driven by Performance</h2>
