--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <!-- About -->
   <section id="about">
     <div class="container about">
-      <img src="images/consulting-team.jpg" alt="Consulting Team">
+      <img src="buzzin.jpg" alt="Consulting Team">
       <div>
         <h2>About Us</h2>
         <p>We are a team of motorsport professionals with decades of combined experience in engineering, racing, and consulting. Our mission is to help teams and organizations achieve peak performance both on and off the track.</p>
