--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Motorsport Consulting Co.</title>
+  <title>Buzzin Hornets Motorsport Consulting</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -25,7 +25,7 @@
 
     /* Hero */
     .hero {
-      background: url('images/consulting-hero.jpg') no-repeat center center/cover;
+      background: url('buzzin.jpg') no-repeat center center/cover;
       text-align: center; color: #fff;
       padding: 120px 20px;
     }
